--- a/podfile
+++ b/podfile
@@ -8,5 +8,5 @@
    pod 'MBProgressHUD', '~> 1.1.0'
    pod 'SwiftyJSON', '~> 4.0'
    pod ‘ReachabilitySwift’, ‘~> 3’
-  
+   pod 'HMSegmentedControl'
    end
