--- a/SkilEx/Info.plist
+++ b/SkilEx/Info.plist
@@ -58,5 +58,29 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+    <string>Description</string>
+    
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>Will you allow this app to always know your location?</string>
+    
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>Do you allow this app to know your current location?</string>
+    <key>NSCalendarsUsageDescription</key>
+    <string>$(PRODUCT_NAME) calendar events</string>
+    <key>NSRemindersUsageDescription</key>
+    <string>$(PRODUCT_NAME) reminder use</string>
+    <key>NSCameraUsageDescription</key>
+    <string>This app requires to access your photo library to show image on profile and send via chat</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>This app requires to access your microphone to record video with your voice send via chat</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app requires to access your photo library to show image on profile and send via chat</string>
+    <key>NSContactsUsageDescription</key>
+    <string>$(PRODUCT_NAME) contact use</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>$(PRODUCT_NAME) location use</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>$(PRODUCT_NAME) location use</string>
 </dict>
 </plist>
